--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,19 @@ project(accountable-confirmer)
 
 # flags
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+#include
+#include_directories(include)
+#include_directories(include/bls)
+#include_directories(include/mcl)
 
 
 # executable
-add_executable(accountable-confirmer src/bls.cpp main.cpp)
+add_executable(accountable-confirmer src/testbls.cpp main.cpp)
 
 # target
 target_include_directories(accountable-confirmer PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-find_library(BLS libbls384_256 lib)
+find_library(BLS bls384_256 lib)
 target_link_libraries(accountable-confirmer LINK_PUBLIC ${BLS})
