--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,9 @@ add_dependencies(secp256k1 libsecp256k1)
 
 
 # executable
-add_executable(accountable-confirmer main.cpp)
+add_executable(accountable-confirmer src/socket_sender.cpp)
+add_executable(broadcast_client src/socket_client.cpp)
+
 #add_executable(accountable-confirmer src/generate_pki.cpp main.cpp)
 
 
