Finish basic functionalities

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,19 +7,25 @@ project(accountable-confirmer)
 # flags
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-#set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/salticidae/cmake/Modules/")
-#
-#add_subdirectory(salticidae)
-#include_directories(salticidae/include)
 
 # include
 include_directories(include)
 include_directories(include/bls)
 include_directories(include/mcl)
 
+find_package(Boost 1.40 REQUIRED)
+include_directories(${Boost_INCLUDE_DIRS})
 
 set(OPENSSL_ROOT_DIR /usr/local/opt/openssl@1.1)
 set(OPENSSL_USE_STATIC_LIBS TRUE)
+
+find_package(Threads REQUIRED)
+if(THREADS_HAVE_PTHREAD_ARG)
+    target_compile_options(accountable-confirmer PUBLIC "-pthread")
+endif()
+if(CMAKE_THREAD_LIBS_INIT)
+    target_link_libraries(accountable-confirmer "${CMAKE_THREAD_LIBS_INIT}")
+endif()
 
 # Search OpenSSL
 find_package(OpenSSL REQUIRED)
@@ -35,8 +41,12 @@ endif()
 
 
 # executable
-add_executable(accountable-confirmer src/accountable_confirmer.cpp src/accountable_confirmer_bls.cpp
-        src/socket.cpp main.cpp)
+add_executable(accountable-confirmer
+        main.cpp
+        src/accountable_confirmer.cpp
+        src/accountable_confirmer_bls.cpp
+        src/message.cpp
+        src/socket.cpp)
 
 
 
