--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,16 @@ project(accountable-confirmer)
 # flags
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
+set(SOURCE_FILES main.cpp
+        src/accountable_confirmer.cpp
+        src/accountable_confirmer_bls.cpp
+        src/tcp_server.cpp src/tcp_client.cpp src/tcp_connection.cpp)
 
 # include
 include_directories(include)
 include_directories(include/bls)
 include_directories(include/mcl)
+include_directories(include/rb)
 
 find_package(Boost 1.40 REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
@@ -50,11 +55,11 @@ endif()
 #add_executable(accountable-confirmer src/network_server.cpp src/tcp_connection.cpp src/tcp_server.cpp)
 #add_executable(accountable-confirmer_client src/network_client.cpp src/tcp_client.cpp)
 
-add_executable(accountable-confirmer main.cpp
-        src/accountable_confirmer.cpp
-        src/accountable_confirmer_bls.cpp
-        src/tcp_server.cpp src/tcp_client.cpp src/tcp_connection.cpp)
+add_executable(accountable-confirmer ${SOURCE_FILES})
 
 
 find_library(BLS bls384_256 lib)
 target_link_libraries(accountable-confirmer ${BLS})
+
+#find_library(RB reliable-broadcast lib)
+#target_link_libraries(accountable-confirmer ${RB})
